tests/warn/pattern-nested.jo
def test(a: Option[Option[Int]]): Unit =
  match a                                      // error
   case Some None => println "some none"
   case Some (Some n) => println n

  match a                                      // error
   case Some (Some n) => println n

  match a                                      // error
   case Some None => println "some none"

data List[T] = Nil | Cons(head: T, tail: List[T])

pattern Inexhaustive(x: Int, rest: List[Int]): List[Int] =
  case Cons x rest

pattern ExhaustiveWithPartial(x: Int, rest: List[Int]): Partial[Cons[Int]] =
  case Cons x rest

pattern NotOccur(x: Int): Cons[Int] =
  case (Cons x Nil) | (Cons _ (Cons _ _))

pattern DoubleOccur(x: Int): Cons[Int] =
  case (Cons x Nil) | (Cons x (Cons x _))

pattern ConsOK(x: Int, rest: List[Int]): Cons[Int] =
  case Cons x rest

def test2(a: List[Int]): Unit =
  match a
    case Cons x (Cons y rest) => println (x + y)
    case Nil => println "empty"

  match a
    case Cons x (Cons y rest) => println (x + y)
    case Cons x Nil => println x

  match a
    case Cons x (Cons _ Nil) | Cons _ Nil | Nil => println "unbound x"

  // Test skip checking body if pattern has errors
  match a
    case NoExist x  => println x

  match a
    case (Cons x Nil) | (Cons x (Cons x _)) => println "double binding"
    case Nil =>
